<resources>
    <string name="app_name">Competitive Events</string>
    <string name="confirm">Confirmar</string>
    <string name="cancel">Cancelar</string>
    <string name="icon">icon</string>
    <string name="image">image</string>
    <string name="back">Volver</string>
    <string name="next">Siguiente</string>
    <string name="previous">Atrás</string>
    <string name="loading">Cargando…</string>
    <string name="check_user">Comprobando credenciales…</string>
    <string name="name">Nombre</string>
    <string name="surname">Apellidos</string>
    <string name="description">Descripción</string>
    <string name="register_date">Fecha registro</string>
    <string name="birth_date">Fecha nacimiento</string>
    <string name="sdf_date">dd-MM-yyyy</string>
    <string name="sdf_api_date">yyyy-MM-dd\'T\'HH:mm:ss</string>
    <string name="modify">Modificar</string>
    <string name="save">Guardar</string>
    <string name="empty" />
    <string name="dots">…</string>
    <string name="title">Título</string>
    <string name="subtitle">Subtítulo</string>
    <string name="zero">0</string>
    <string name="seconds">segundos</string>
    <string name="minutes">minutos</string>
    <string name="hours">horas</string>
    <string name="hour">Hora</string>
    <string name="minute">Minuto</string>
    <string name="second">Segundo</string>
    <string name="days">días</string>
    <string name="init_date">Fecha de inicio</string>
    <string name="end_date">Fecha de fin</string>
    <string name="max_places">Plazas máximas</string>
    <string name="score">Puntuación</string>
    <string name="create">Crear</string>
    <string name="show_more">Leer más</string>
    <string name="show_less"> Leer menos</string>
    <string name="rewards">Premios</string>
    <string name="punishments">Castigos</string>
    <string name="add">Añadir</string>
    <string name="value">Valor</string>
    <string name="owner">Administrador</string>
    <string name="user">Usuario</string>
    <string name="best_score">Mejor puntuación</string>
    <string name="action_ban">Banear</string>
    <string name="action_delete">Borrar</string>
    <string name="action_accept">Aceptar</string>
    <string name="action_reject">Rechazar</string>
    <string name="action_validate">Validar</string>
    <string name="action_invalidate">Marca como no válida</string>
    <string name="action_invite">Invitar</string>
    <string name="status">Estado</string>
    <string name="valid">Válidada</string>
    <string name="no_valid">No válida</string>
    <string name="edit">Editar</string>
    <string name="identifier">Identificador</string>
    <string name="identifier_copy">Identificador copiado</string>
    <string name="details">Detalles</string>
    <string name="required_position">Posición requerida</string>
    <string name="two_dots">:</string>
    <string name="one">1</string>
    <string name="logout">Cerrar sesión</string>
    <string name="search">Buscar</string>
    <string name="exit">Salir</string>
    <string name="home">Inicio</string>
    <string name="events">Eventos</string>
    <string name="your_events">Mis eventos</string>
    <string name="create_event">Nuevo evento</string>
    <string name="profile">Perfil</string>
    <string name="update_profile">Actualizar Perfil</string>
    <string name="user_created">El usuario ha sido creado con éxito. Se ha enviado un correo a tu dirección de correo electrónico. Por favor, confirma la creación de usuario.</string>
    <string name="user_created_title">Usuario creado</string>
    <string name="username">Identificador de usuario</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="password">Contraseña</string>
    <string name="password_confirm">Confirmar contraseña</string>
    <string name="login">Login</string>
    <string name="register">Registro</string>
    <string name="register_title">Registro de usuario</string>
    <string name="register_intro">Regístrate en la aplicación y compite con tus amigos en un sin fín de actividades</string>
    <string name="update_avatar">Cambiar avatar…</string>
    <string name="success_updated_user">Usuario actualizado con éxito.</string>
    <string name="success_updated_avatar">Avatar actualizado con éxito.</string>
    <string name="user_invited">Invitación enviada</string>
    <string name="user_invited_confirmed">Se ha invitado al usuario con éxito</string>
    <string name="user_waiting_approval">Esperando aprobación</string>
    <string name="user_accepted">Aceptado</string>
    <string name="user_reject">Rechazado</string>
    <string name="user_deleted">Eliminado</string>
    <string name="user_id">Identificador</string>
    <string name="user_action">Acción sobre usuario</string>
    <string name="user_action_success">Se ha actualizado al usuario con éxito</string>
    <string name="user_edit">Editar usuario</string>
    <string name="user_available_actions">Acciones a realizar sobre el usario</string>
    <string name="user_invite">Invitar a usuario</string>
    <string name="contacts">Contactos</string>
    <string name="events_list">Listado de eventos</string>
    <string name="events_init">Inicio: %1$s</string>
    <string name="events_end">Fin: %1$s (%2$s)</string>
    <string name="events_num_participants">Núm. participantes: %1$d</string>
    <string name="events_available_places">Plazas disponibles: %1$d</string>
    <string name="events_new">Nuevo evento</string>
    <string name="events_edit">Editar evento</string>
    <string name="events_find_new">Encuentra nuevos Eventos</string>
    <string name="events_find_or_create">Crea tu propio evento, busca o únete a tus favoritos</string>
    <string name="events_create_new">Crear un nuevo evento</string>
    <string name="events_create_new_description">Crea un nuevo evento del tipo que quieras e invita a tus amigos a participar</string>
    <string name="events_search">Buscar eventos</string>
    <string name="events_search_description">Encuentra un nuevo evento del tipo que quieras y únete para competir</string>
    <string name="events_invitations">Invitaciones</string>
    <string name="events_invitations_no_pending">Ahora mismo no tienes invitaciones pendientes</string>
    <string name="events_invitations_pending">Tienes %s invitaciones pendientes</string>
    <string name="events_creation_title">Crea un nuevo evento a tu gusto e invita a tus amigos a participar</string>
    <string name="events_creation_basic_data">Datos básicos</string>
    <string name="events_creation_main_image">Imagen principal</string>
    <string name="events_creation_event_type">Tipo de evento</string>
    <string name="events_creation_event_properties">Propiedades del evento</string>
    <string name="events_creation_event_score_type">Tipo de puntuación</string>
    <string name="events_join">Unirse</string>
    <string name="events_request_join">Solictar unirse</string>
    <string name="events_joined">Ya te has unido a este evento</string>
    <string name="events_accept_invitation">Aceptar invitación</string>
    <string name="events_waiting_approval">Esperando aprobación para unirse</string>
    <string name="events_request_rejected">Solicitud rechazada</string>
    <string name="events_user_deleted">Has sido eliminado del evento</string>
    <string name="events_user_join_success">Te has unido con éxito al evento</string>
    <string name="events_user_request_join">Has solicitado unirte al evento. Esperando a que un administrador del evento acepte la invitación</string>
    <string name="events_user_request_reject">Has rechazado la invitación para unirte a este evento.</string>
    <string name="events_identifier">Identificador: %1$s</string>
    <string name="events_private">Este evento es privado</string>
    <string name="event_created_title">Evento creado</string>
    <string name="event_created">El evento se ha creado con éxito. Ahora te aparecerá en tu listado de eventos.</string>
    <string name="event_participants">Participantes</string>
    <string name="event_invited">Te han invitado a este evento</string>
    <string name="event_edit_success">Evento editado con éxito</string>
    <string name="event_public_search">Aparecer en búsquedas públicas</string>
    <string name="event_approval_nedded">Se necesita invitación para unirse</string>
    <string name="event_new_participants_approval">Nuevos participantes necesitan aprobación</string>
    <string name="event_sort_asc">Puntuación ordenada ascendentemente</string>
    <string name="event_new_reward">Nuevo premio</string>
    <string name="event_add_reward">+ Añadir nuevo premio…</string>
    <string name="event_add_punishment">+ Añadir nuevo castigo…</string>
    <string name="event_new_punishment">Nuevo castigo</string>
    <string name="event_empty_list">No tienes ningún evento</string>
    <string name="event_empty_list_search"><u>Busca o crea un nuevo evento</u></string>
    <string name="invite_string"><u>Indentificador/email</u></string>
    <string name="events_all">Cualquiera</string>
    <string name="events_sports">Deportes</string>
    <string name="events_videogames">Videojuegos </string>
    <string name="events_family">Familia</string>
    <string name="events_academic">Estudios</string>
    <string name="events_other">Otros</string>
    <string name="event_type">Tipo de evento: %1$s</string>
    <string name="score_numeric">Numérica</string>
    <string name="score_decimal">Decimal</string>
    <string name="score_time">Tiempo</string>
    <string name="score_add">Añadir nueva puntuación</string>
    <string name="image_evidence">Puedes incluir una imagen que aporte información o demuestre que es real si quieres</string>
    <string name="score_action">Acción sobre puntuación</string>
    <string name="score_action_success">Se ha actualizado la puntuación correctamente</string>
    <string name="score_not_valid">Esta puntuación ha sido marcada como no válida</string>
    <string name="score_looser">Perdedor</string>
    <string name="score_edit">Editar puntuación</string>
    <string name="score_available_actions">Acciones a realizar sobre la puntuación</string>
    <string name="score_sort">Ordenación de puntuaciones</string>
    <string name="score_asc">Ascendentemente</string>
    <string name="score_desc">Descendentemente</string>
    <string name="reward_required_position">Posición requerida: %1$d (%2$s)</string>
    <string name="reward_winner">Ganador: %1$s</string>
    <string name="higher">más alta</string>
    <string name="lower">más baja</string>
    <string name="winner">Ganador</string>
    <string name="date">Fecha</string>
    <string name="message">Mensaje</string>
    <string name="user_new_score">%1$s ha incluido una nueva puntuación personal. Su valor es %2$s.</string>
    <string name="user_join_notification">%1$s se ha unido al evento</string>
    <string name="winner_notification">%1$s ha ganado un premio!</string>
    <string name="looser_notification">%1$s ha recibido un castigo!</string>
    <string name="init_event">El evento ha empezado! Ahora puedes enviar tus puntuaciones.</string>
    <string name="end_event">El evento ha finalizado.</string>
    <string name="comment_write">Escribe un mensaje…</string>
    <string name="error_title">Error</string>
    <string name="error_api_undefined">Ha ocurrido un error en la llamada al servicio</string>
    <string name="error_required">Este campo es obligatorio</string>
    <string name="error_username_not_valid">Este identificador no es válido. Sólo caracteres alfanuméricos</string>
    <string name="error_username_exists">Este identificador ya existe</string>
    <string name="error_email_not_valid">Este email no es válido</string>
    <string name="login_fragment_label">Login Fragment</string>
    <string name="register_fragment_label">Register Fragment</string>
    <string name="splash_screen_fragment_label">Splash Screen Fragment</string>
</resources>