<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollview_events_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/img_event_detail_main"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/steampunk_room" />

            <TextView
                android:id="@+id/txt_event_detail_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="32dp"
                android:paddingTop="16dp"
                android:paddingEnd="32dp"
                android:text="@string/title"
                android:textColor="@color/primary_dark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_event_detail_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="32dp"
                android:paddingTop="8dp"
                android:paddingEnd="32dp"
                android:text="@string/subtitle"
                android:textSize="16sp"
                android:textStyle="italic" />

            <com.borjabravo.readmoretextview.ReadMoreTextView
                android:id="@+id/txt_event_detail_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="32dp"
                android:paddingTop="8dp"
                android:paddingEnd="32dp"
                android:text="@string/description"
                app:colorClickableText="@color/primary"
                app:trimCollapsedText="@string/show_more"
                app:trimExpandedText="@string/show_less"
                app:trimLength="200"
                app:trimMode="trimModeLength" />

            <View
                android:id="@+id/divider9"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_event_detail_init_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:text="@string/events_init" />

                <TextView
                    android:id="@+id/txt_event_detail_end_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:gravity="end"
                    android:text="@string/events_end" />
            </LinearLayout>

            <TextView
                android:id="@+id/txt_event_detail_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:text="@string/events_identifier" />

            <TextView
                android:id="@+id/txt_event_detail_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="32dp"
                android:paddingTop="8dp"
                android:paddingEnd="32dp"
                android:text="@string/event_type" />

            <TextView
                android:id="@+id/txt_event_detail_num_participants"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="32dp"
                android:paddingTop="8dp"
                android:paddingEnd="32dp"
                android:text="@string/events_num_participants" />

            <TextView
                android:id="@+id/txt_event_detail_available_places"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:paddingStart="32dp"
                android:paddingTop="8dp"
                android:paddingEnd="32dp"
                android:text="@string/events_available_places" />

            <View
                android:id="@+id/divider8"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <TextView
                android:id="@+id/label_event_detail_rewards"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="32dp"
                android:paddingTop="16dp"
                android:paddingEnd="32dp"
                android:text="@string/rewards"
                android:textAllCaps="true"
                android:textColor="@color/primary_dark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_reward_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent">

            </androidx.recyclerview.widget.RecyclerView>

            <View
                android:id="@+id/divider_event_detail_punishments"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <TextView
                android:id="@+id/label_event_detail_punishments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="32dp"
                android:paddingTop="16dp"
                android:paddingEnd="32dp"
                android:text="@string/punishments"
                android:textAllCaps="true"
                android:textColor="@color/primary_dark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_punishment_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent">

            </androidx.recyclerview.widget.RecyclerView>

            <Button
                android:id="@+id/btn_event_detail_join"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_margin="32dp"
                android:text="@string/events_join" />

            <TextView
                android:id="@+id/txt_event_detail_user_joined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="32dp"
                android:text="@string/events_joined"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/primary_dark"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="gone"
                tools:visibility="visible" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="32dp"/>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>