<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_login"
    app:startDestination="@id/splashScreenFragment">

    <fragment
        android:id="@+id/splashScreenFragment"
        android:name="es.jocasolo.competitiveeventsapp.SplashScreenFragment"
        android:label="@string/splash_screen_fragment_label"
        tools:layout="@layout/fragment_splash_screen">
        <action
            android:id="@+id/action_Splash_to_Login"
            app:destination="@id/loginFragment" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="es.jocasolo.competitiveeventsapp.LoginFragment"
        android:label="@string/login_fragment_label"
        tools:layout="@layout/fragment_login">

        <action
            android:id="@+id/action_Login_to_Register"
            app:destination="@id/registerFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/registerFragment"
        android:name="es.jocasolo.competitiveeventsapp.RegisterFragment"
        android:label="@string/register_fragment_label"
        tools:layout="@layout/fragment_register">

        <action
            android:id="@+id/action_Register_to_Login"
            app:destination="@id/loginFragment" />
    </fragment>
</navigation>