<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_event_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tabInlineLabel="true"
        app:tabMode="fixed">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_event_main_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/chat"
            android:text="@string/home" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_event_main_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/info"
            android:text="@string/details" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_event_main_users"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/group"
            android:text="@string/event_participants" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpager_event_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tab_event_main" />

</androidx.constraintlayout.widget.ConstraintLayout>